--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,6 @@ name = "pypi"
 
 [packages]
 mysecrets = "*"
-pdfminer = "*"
 certifi = "==2025.4.26"
 charset-normalizer = "==3.4.1"
 idna = "==3.10"
@@ -16,7 +15,7 @@ pytz = "==2025.2"
 requests = "==2.32.3"
 six = "==1.17.0"
 tzdata = "==2025.2"
-urllib3 = "==2.4.0"
+urllib3 = ">=2.4.0"
 argparse = "*"
 "pdfminer.six" = "*"
 
